// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render a different name, prompt, and beta tag if provided 1`] = `
<Header
  indexPatternName="test index pattern"
  isBeta={true}
  isIncludingSystemIndices={false}
  onChangeIncludingSystemIndices={[Function]}
  prompt={
    <div>
      Test prompt
    </div>
  }
>
  <div>
    <EuiTitle>
      <h1
        className="euiTitle euiTitle--medium"
      >
        Create test index pattern
         
        <EuiBetaBadge
          label="Beta"
        >
          <span
            className="euiBetaBadge"
            title="Beta"
          >
            Beta
          </span>
        </EuiBetaBadge>
      </h1>
    </EuiTitle>
    <EuiFlexGroup>
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiText
              size="s"
            >
              <div
                className="euiText euiText--small"
              >
                <EuiTextColor
                  color="subdued"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "An index pattern can match a single source, for example, filebeat-4-3-22, or multiple data sources, filebeat-*. <a href=\\"https://www.elastic.co/guide/en/kibana/current/tutorial-define-index.html\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Read documentation</a>",
                    }
                  }
                >
                  <span
                    className="euiTextColor euiTextColor--subdued"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "An index pattern can match a single source, for example, filebeat-4-3-22, or multiple data sources, filebeat-*. <a href=\\"https://www.elastic.co/guide/en/kibana/current/tutorial-define-index.html\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Read documentation</a>",
                      }
                    }
                  />
                </EuiTextColor>
                <EuiIcon
                  size="s"
                  type="popout"
                >
                  <div
                    data-euiicon-type="popout"
                    size="s"
                  />
                </EuiIcon>
              </div>
            </EuiText>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiSpacer
      size="s"
    >
      <div
        className="euiSpacer euiSpacer--s"
      />
    </EuiSpacer>
    <div>
      Test prompt
    </div>
    <EuiHorizontalRule>
      <hr
        className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
      />
    </EuiHorizontalRule>
  </div>
</Header>
`;

exports[`Header should render normally 1`] = `
<Header
  indexPatternName="test index pattern"
  isIncludingSystemIndices={true}
  onChangeIncludingSystemIndices={[Function]}
>
  <div>
    <EuiTitle>
      <h1
        className="euiTitle euiTitle--medium"
      >
        Create test index pattern
      </h1>
    </EuiTitle>
    <EuiFlexGroup>
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiText
              size="s"
            >
              <div
                className="euiText euiText--small"
              >
                <EuiTextColor
                  color="subdued"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "An index pattern can match a single source, for example, filebeat-4-3-22, or multiple data sources, filebeat-*. <a href=\\"https://www.elastic.co/guide/en/kibana/current/tutorial-define-index.html\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Read documentation</a>",
                    }
                  }
                >
                  <span
                    className="euiTextColor euiTextColor--subdued"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "An index pattern can match a single source, for example, filebeat-4-3-22, or multiple data sources, filebeat-*. <a href=\\"https://www.elastic.co/guide/en/kibana/current/tutorial-define-index.html\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Read documentation</a>",
                      }
                    }
                  />
                </EuiTextColor>
                <EuiIcon
                  size="s"
                  type="popout"
                >
                  <div
                    data-euiicon-type="popout"
                    size="s"
                  />
                </EuiIcon>
              </div>
            </EuiText>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiHorizontalRule>
      <hr
        className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
      />
    </EuiHorizontalRule>
  </div>
</Header>
`;

exports[`Header should render without including system indices 1`] = `
<Header
  indexPatternName="test index pattern"
  isIncludingSystemIndices={false}
  onChangeIncludingSystemIndices={[Function]}
>
  <div>
    <EuiTitle>
      <h1
        className="euiTitle euiTitle--medium"
      >
        Create test index pattern
      </h1>
    </EuiTitle>
    <EuiFlexGroup>
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiText
              size="s"
            >
              <div
                className="euiText euiText--small"
              >
                <EuiTextColor
                  color="subdued"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "An index pattern can match a single source, for example, filebeat-4-3-22, or multiple data sources, filebeat-*. <a href=\\"https://www.elastic.co/guide/en/kibana/current/tutorial-define-index.html\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Read documentation</a>",
                    }
                  }
                >
                  <span
                    className="euiTextColor euiTextColor--subdued"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "An index pattern can match a single source, for example, filebeat-4-3-22, or multiple data sources, filebeat-*. <a href=\\"https://www.elastic.co/guide/en/kibana/current/tutorial-define-index.html\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Read documentation</a>",
                      }
                    }
                  />
                </EuiTextColor>
                <EuiIcon
                  size="s"
                  type="popout"
                >
                  <div
                    data-euiicon-type="popout"
                    size="s"
                  />
                </EuiIcon>
              </div>
            </EuiText>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiHorizontalRule>
      <hr
        className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
      />
    </EuiHorizontalRule>
  </div>
</Header>
`;
